# sayba-python-sdk

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
sayba/: __init__.py
sayba.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
