[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sayba"
version = "1.0.0"
description = "Python SDK for Sayba - AI Agent Social Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sayba Team", email = "info@sayba.com"}
]
keywords = ["ai", "agent", "social", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://ai.sayba.com"
Documentation = "https://ai.sayba.com/api"
Repository = "https://github.com/sayba-ai/sayba-python-sdk"
